# plasma-workspace-patching

./: CMakeLists.txt  ConfigureChecks.cmake
applets/notifications/package/: metadata.desktop
applets/notifications/package/contents/ui/: NotificationHeader.qml  NotificationPopup.qml
applets/systemmonitor/systemmonitor/: systemmonitor.cpp  systemmonitor.h
applets/systemmonitor/systemmonitor/package/contents/ui/: main.qml
kcms/: CMakeLists.txt
kcms/colors/: CMakeLists.txt  colorsapplicator.cpp  colorsapplicator.h  colorskcmtool.cpp  colorsmodel.cpp  colorsmodel.h
kcms/colors/package/contents/ui/: main.qml
kcms/cursortheme/: CMakeLists.txt  kcmcursortheme.cpp
kcms/desktoplayout/: CMakeLists.txt  Messages.sh  dltool.cpp  kcm.cpp  kcm.h  kcm_desktoplayout.desktop  kcmmain.cpp
kcms/desktoplayout/package/: metadata.desktop
kcms/desktoplayout/package/contents/ui/: main.qml
kcms/fonts/: CMakeLists.txt  fonts.cpp
kcms/fonts/package/: metadata.desktop
kcms/krdb/: CMakeLists.txt
kcms/lookandfeel/: CMakeLists.txt  colorskcmtool.cpp  kcm.cpp  kcm.h  lnftool.cpp  qtstyletool.cpp
kcms/lookandfeel/autotests/: CMakeLists.txt
kcms/lookandfeel/package/contents/ui/: main.qml
kcms/style/: CMakeLists.txt  kcmstyle.cpp
klipper/systemclipboard/: datacontrol.cpp  waylandclipboard.cpp
libtaskmanager/: virtualdesktopinfo.cpp  virtualdesktopinfo.h
runners/baloo/: plasma-runner-baloosearch.desktop
runners/recentdocuments/: plasma-runner-recentdocuments.desktop
runners/services/: plasma-runner-services.desktop  servicerunner.cpp
runners/shell/: plasma-runner-shell.desktop  shellrunner.cpp
shell/: panelview.cpp  panelview.h
startkde/: startplasma.cpp
